--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
         <link rel="stylesheet" href="./assets/css/assets/css/responsive.css" />
     </head>
-    <body>
+    <body style="height: 5000px">
+        <!-- header -->
         <header class="header">
             <div class="container">
                 <div class="header-top">
@@ -135,9 +136,9 @@
                     </nav>
                     <!-- Action -->
                     <div class="header-action">
-                        <a href="#!" class="btn header-action__signup"
-                            >Sign up</a
-                        >
+                        <a href="#!" class="btn header-action__signup">
+                            Sign up
+                        </a>
                     </div>
                 </div>
             </div>
@@ -255,6 +256,67 @@
                     </section>
                 </div>
             </section>
+        </section>
+
+        <!-- About -->
+        <section class="about">
+            <div class="container">
+                <div class="about__inner">
+                    <div class="about__content">
+                        <p class="about__label">// About //</p>
+                        <div class="about__heading section-heading">
+                            Best Agency For Your Pet.
+                        </div>
+                        <div class="about__desc section-desc">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua.
+                        </div>
+                        <div class="about__checklist">
+                            <span class="about__check-item"
+                                >Certified Groomer</span
+                            >
+                            <span class="about__check-item">Animal Lover</span>
+                            <span class="about__check-item">
+                                14+ Years Experience
+                            </span>
+                            <span class="about__check-item">
+                                Pet Parent Of 3 Dogs
+                            </span>
+                        </div>
+                    </div>
+                    <div class="about__media">
+                        <!-- About card -->
+                        <div class="about__card">
+                            <b class="about__card-title">20+</b>
+                            <p class="about__card-desc">Years Experience</p>
+                            <img
+                                src="./assets/img/about-decor-01.svg"
+                                alt=""
+                                class="about__card-decor"
+                            />
+                        </div>
+
+                        <!-- About image wrapper -->
+                        <figure class="about__img-wrap">
+                            <img
+                                src="./assets/img/about-01.png"
+                                alt=""
+                                class="about__img"
+                            />
+                        </figure>
+
+                        <img
+                            src="./assets/img/about-decor-02.svg"
+                            alt=""
+                            class="about__media-decor"
+                        />
+                    </div>
+                    <div class="about__media">Column3</div>
+
+                    <div class="about__content">Column4</div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
