--- a/index.html
+++ b/index.html
@@ -312,9 +312,139 @@
                             class="about__media-decor"
                         />
                     </div>
-                    <div class="about__media">Column3</div>
+                    <div class="about__media">
+                        <figure class="about__img-wrap about__img-wrap-bottom">
+                            <img
+                                src="./assets/img/about-02.png"
+                                alt=""
+                                class="about__img about__img-bottom"
+                            />
 
-                    <div class="about__content">Column4</div>
+                            <!-- Decor -->
+                            <div>
+                                <img
+                                    src="./assets/img/about-decor-03.svg"
+                                    alt=""
+                                    class="about__decor-img"
+                                />
+                                <img
+                                    src="./assets/img/about-decor-04.svg"
+                                    alt=""
+                                    class="about__decor-img"
+                                />
+                                <img
+                                    src="./assets/img/about-decor-05.svg"
+                                    alt=""
+                                    class="about__decor-img"
+                                />
+                                <img
+                                    src="./assets/img/about-decor-06.svg"
+                                    alt=""
+                                    class="about__decor-img"
+                                />
+                                <img
+                                    src="./assets/img/about-decor-07.svg"
+                                    alt=""
+                                    class="about__decor-img"
+                                />
+                                <img
+                                    src="./assets/img/about-decor-08.svg"
+                                    alt=""
+                                    class="about__decor-img"
+                                />
+                            </div>
+                        </figure>
+                    </div>
+
+                    <section class="about__content">
+                        <div class="about__heading section-heading">
+                            Taking A Vacation? So Is Your Pet.
+                        </div>
+                        <div class="about__desc-bottom section-desc">
+                            We offer long-term and short-term boarding. Every
+                            dog has its own private, spacious room and daily
+                            individual time in our large play yard.
+                        </div>
+                        <div class="tab">
+                            <ul class="tab__list">
+                                <!-- Tab list 1 -->
+                                <li class="tab__item tab__item--active">
+                                    <img
+                                        src="./assets/icon/about-icon-01.png"
+                                        alt=""
+                                        class="tab__icon"
+                                    />
+                                    <span class="tab__title">
+                                        Pet Boarding
+                                    </span>
+                                </li>
+
+                                <!-- Tab list 2 -->
+                                <li class="tab__item">
+                                    <img
+                                        src="./assets/icon/about-icon-02.png"
+                                        alt=""
+                                        class="tab__icon"
+                                    />
+                                    <span class="tab__title">
+                                        Pet Daycare
+                                    </span>
+                                </li>
+
+                                <!-- Tab list 3 -->
+                                <li class="tab__item">
+                                    <img
+                                        src="./assets/icon/about-icon-03.png"
+                                        alt=""
+                                        class="tab__icon"
+                                    />
+                                    <span class="tab__title">
+                                        Pet Transport
+                                    </span>
+                                </li>
+                            </ul>
+
+                            <div class="tab__contents">
+                                <!-- Tab content 1 -->
+                                <div
+                                    class="tab__content-item tab__content-item--active"
+                                >
+                                    <p class="tab__content-desc">
+                                        While you're on holiday, here's where
+                                        your furry friends will spend their time
+                                        1.
+                                    </p>
+                                    <a href="#!" class="tab__content-more">
+                                        View more
+                                    </a>
+                                </div>
+
+                                <!-- Tab content 2 -->
+                                <div class="tab__content-item">
+                                    <p class="tab__content-desc">
+                                        While you're on holiday, here's where
+                                        your furry friends will spend their time
+                                        2.
+                                    </p>
+                                    <a href="#!" class="tab__content-more">
+                                        View more
+                                    </a>
+                                </div>
+
+                                <!-- Tab content 3 -->
+                                <div class="tab__content-item">
+                                    <p class="tab__content-desc">
+                                        While you're on holiday, here's where
+                                        your furry friends will spend their time
+                                        3.
+                                    </p>
+                                    <a href="#!" class="tab__content-more">
+                                        View more
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </section>
